# bip39-dict

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: bits.rs  entropy.rs  index.rs  lib.rs  mnemonics.rs  seed.rs  tests.rs
src/dictionary/: chinese_simplified.rs  chinese_traditional.rs  english.rs  french.rs  italian.rs  japanese.rs  korean.rs  mod.rs  spanish.rs
